--- a/estilos-escuro.css
+++ b/estilos-escuro.css
@@ -28,10 +28,18 @@ body {
 	font-family: 'Work Sans', sans-serif;
 }
 
+.sidenav a:visted {
+    color: black;
+}
+
 .sidenav a:hover {	
 	background-color: rgb(0, 168, 204);
 	color: black;
 }	
+
+.sidenav a:visited {
+    color: lightgray;
+}
 
 .nav-index {
 	display: block;
@@ -91,6 +99,10 @@ body {
 .botao:hover {
 	background-image: linear-gradient(180deg, rgb(12, 123, 147), rgb(20, 40, 80));
 	color: rgb(164, 192, 198);
+}
+
+.botao:visited {
+    color: rgb(20, 40, 80);
 }
 
 .titulo {
@@ -232,11 +244,9 @@ label {
 }
 
 a {
-   color: rgb(0, 168, 204);		
+    color: rgb(0, 168, 204);
 }
 
 a:visited {
    color: rgb(2, 204, 247);
 }
-
-
