--- a/estilos-claro.css
+++ b/estilos-claro.css
@@ -59,6 +59,27 @@ body {
 	opacity: 0.9;
 }
 
+#botoes {
+	display: flex;
+	flex: flex-end;
+}
+
+#botoes {
+    margin-right: 12px;
+    float: right;
+}
+
+#botoes button {
+    background: rgb(33, 85, 205);
+    padding: 5px;
+    color: rgb(232, 249, 253);
+    border-radius: 10px;
+}
+
+#botoes button:hover {
+    cursor: pointer;
+}
+
 .nav {
 	top: 0;
 	display: flex;
@@ -93,30 +114,6 @@ body {
 
 .titulo {
 	flex: 80%;
-}
-
-#table1, #table1 tr, #table1 td, #table2, #table2 tr, #table2 td {
-	border: none;
-	background-color: rgb(232, 249, 253);
-}
-
-#table1 ul, #table2 ul {
-	background: rgb(232, 249, 253);
-}
-
-#table2 li {
-	margin-left: 70px;
-}
-
-#table1 img, #table2 img {
-	border: 4px solid rgb(33, 85, 205);
-	border-radius: 10px; 
-	width: 420px;
-	heigh: 290px;
-}
-
-#table1 img {
-	margin-left: 30px;
 }
 
 .topico {
@@ -162,6 +159,30 @@ pre {
 	font-family: "Courier New";
 }
 
+#table1, #table1 tr, #table1 td, #table2, #table2 tr, #table2 td {
+	border: none;
+	background-color: rgb(232, 249, 253);
+}
+
+#table1 ul, #table2 ul {
+	background: rgb(232, 249, 253);
+}
+
+#table2 li {
+	margin-left: 70px;
+}
+
+#table1 img, #table2 img {
+	border: 4px solid rgb(33, 85, 205);
+	border-radius: 10px; 
+	width: 420px;
+	heigh: 290px;
+}
+
+#table1 img {
+	margin-left: 30px;
+}
+
 table {
 	border: 4px solid rgb(33, 85, 205);
 	background-color: rgb(121, 218, 232);
@@ -196,32 +217,12 @@ table tr:nth-child(odd) {
 	border-radius: 10px;
 }
 
-form {
-	margin-left: 50px;
-	font-family: 'Work Sans', sans-serif;
-}
-
 .gabarito {
 	color: rgb(1, 69, 17); 
 	margin-left: 50px;
 }
 
-#botoes {
-	display: flex;
-	flex: flex-end;
+form {
+	margin-left: 50px;
+	font-family: 'Work Sans', sans-serif;
 }
-
-#botoes {
-    margin-right: 12px;
-    float: right;
-}
-
-#botoes button {
-    background: rgb(33, 85, 205);
-    padding: 5px;
-    color: rgb(232, 249, 253);
-    border-radius: 10px;
-}
-
-
-
