--- a/estilos-escuro.css
+++ b/estilos-escuro.css
@@ -21,14 +21,14 @@ body {
 .sidenav a {
 	color: lightgray;
 	padding: 16px;
-	display: block;
+    display: block;
 	text-decoration: none;
 	font-weight: normal;
 	font-family: 'Work Sans', sans-serif;
 }
 
 .sidenav a:visted {
-    	color: black;
+    color: black;
 }
 
 .sidenav a:hover {	
@@ -37,7 +37,7 @@ body {
 }	
 
 .sidenav a:visited {
-    	color: lightgray;
+    color: lightgray;
 }
 
 .nav-index {
@@ -65,6 +65,27 @@ body {
 
 .logo img:hover {
 	opacity: 0.9;
+}
+
+#botoes {
+	display: flex;
+	flex: flex-end;
+}
+
+#botoes {
+    margin-right: 12px;
+    float: right;
+}
+
+#botoes button {
+    background: rgb(20, 40, 80);
+    padding: 5px;
+    color: rgb(164, 192, 198);
+    border-radius: 10px;
+}
+
+#botoes button:hover {
+    cursor: pointer;
 }
 
 .nav {
@@ -100,36 +121,11 @@ body {
 }
 
 .botao:visited {
-    	color: rgb(20, 40, 80);
+    color: rgb(20, 40, 80);
 }
 
 .titulo {
-	flex: 10%;
-}
-
-
-#table1, #table1 tr, #table1 td, #table2, #table2 tr, #table2 td {
-	border: none;
-	background-color: rgb(39, 73, 109);
-}
-
-#table1 ul, #table2 ul {
-	background: rgb(39, 73, 109);
-}
-
-#table2 li {
-	margin-left: 70px;
-}
-
-#table1 img, #table2 img {
-	border: 4px solid rgb(20, 40, 80);
-	border-radius: 10px; 
-	width: 420px;
-	heigh: 290px;
-}
-
-#table1 img {
-	margin-left: 30px;
+	flex: 90%;
 }
 
 .topico {
@@ -174,6 +170,30 @@ pre {
 	margin-left: 15px;
 	color: rgb(2, 193, 234);
 	font-family: "Courier New";
+}
+
+#table1, #table1 tr, #table1 td, #table2, #table2 tr, #table2 td {
+	border: none;
+	background-color: rgb(39, 73, 109);
+}
+
+#table1 ul, #table2 ul {
+	background: rgb(39, 73, 109);
+}
+
+#table2 li {
+	margin-left: 70px;
+}
+
+#table1 img, #table2 img {
+	border: 4px solid rgb(20, 40, 80);
+	border-radius: 10px; 
+	width: 420px;
+	heigh: 290px;
+}
+
+#table1 img {
+	margin-left: 30px;
 }
 
 table {
@@ -224,27 +244,10 @@ label {
 	color: lightgray;
 }
 
-#botoes {
-	display: flex;
-	flex: flex-end;
-}
-
-#botoes {
-    	margin-right: 12px;
-    	float: right;
-}
-
-#botoes button {
-    	background: rgb(20, 40, 80);
-    	padding: 5px;
-    	color: rgb(164, 192, 198);
-    	border-radius: 10px;
-}
-
 a {
-    	color: rgb(0, 168, 204);
+    color: rgb(0, 168, 204);
 }
 
 a:visited {
-   	color: rgb(2, 204, 247);
+   color: rgb(2, 204, 247);
 }
